--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,82 @@
 /* You can add global styles to this file, and also import other style files */
+
+$Colors-1: ( Primary: #265B6A, Secondary: #fff, Accent-1: #009F93);
+
+$Colors-2: ( Primary: #BA511A, Secondary: #ECD790, Accent-1: #869391);
+
+$Colors-3: ( Primary: #3F3C35, Secondary: #C2AFA0, Accent-1: #AB8E72);
+
+$Colors: ( Primary: #326273, Secondary: #EEEEEE, Accent-1: #F8EDD7, Primary-Hover: #418199);
+
+.card-header{
+    background-color: map-get($Colors, Secondary);
+}
+
+.btn-primary{
+    background-color: map-get($Colors, Primary-Hover);
+    color: map-get($Colors, Secondary);
+}
+
+.btn-primary:hover{
+    background-color: map-get($Colors, Primary);
+}
+
+
+:root {
+    --jumbotron-padding-y: 3rem;
+}
+
+.jumbotron {
+    padding-top: var(--jumbotron-padding-y);
+    padding-bottom: var(--jumbotron-padding-y);
+    margin-bottom: 0;
+    background-color: map-get($Colors, Secondary);
+}
+
+@media (min-width: 768px) {
+    .jumbotron {
+        padding-top: calc(var(--jumbotron-padding-y) * 2);
+        padding-bottom: calc(var(--jumbotron-padding-y) * 2);
+    }
+}
+
+.jumbotron p:last-child {
+    margin-bottom: 0;
+}
+
+.jumbotron-heading {
+    font-weight: 300;
+}
+
+.jumbotron .container {
+    max-width: 40rem;
+}
+
+footer {
+    padding-top: 3rem;
+    padding-bottom: 3rem;
+}
+
+footer p {
+    margin-bottom: .25rem;
+}
+
+.box-shadow {
+    box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
+}
+
+.bg-Color-P {
+    background-color: map-get($Colors, Primary);
+}
+
+.Color-A1 {
+    color : map-get($Colors, Accent-1);
+}
+
+.bg-Color-A1 {
+    background-color : map-get($Colors, Accent-1)
+}
+
+.section-break {
+    background-color: map-get($Colors, Accent-1)
+}
